--- a/catalog.html
+++ b/catalog.html
@@ -17,37 +17,109 @@
           <a href="javascript:void(0)" class="logo">
             <img src="./assets/img/logo.svg" alt="img">
           </a>
-          <nav>
-            <ul class="nav-menu">
-              <li>
-                <a href="javascript:void(0)">
-                  Главная
+          <div class="nav-wrapper">
+            <div class="nav-content">
+              <div class="nav-content__head">
+                <a href="javascript:void(0)" class="logo">
+                  <img src="./assets/img/logo.svg" alt="img">
                 </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)">
-                  О компании
-                </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)">
-                  Наши услуги
-                </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)">
-                  Проекты
-                </a>
-              </li>
-              <li>
-                <a href="javascript:void(0)">
-                  Контакты
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <button type="button" class="consult">
-            Заказать консультацию
+                <button type="button" class="close-menu">
+                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect y="14.1406" width="20" height="1.5" rx="0.75" transform="rotate(-45 0 14.1406)"
+                      fill="#73716F" />
+                    <rect x="1.06055" y="0.148438" width="20" height="1.5" rx="0.75"
+                      transform="rotate(45 1.06055 0.148438)" fill="#73716F" />
+                  </svg>
+                </button>
+              </div>
+              <nav>
+                <ul class="nav-menu">
+                  <li>
+                    <a href="javascript:void(0)">
+                      Главная
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0)">
+                      О компании
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0)">
+                      Наши услуги
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0)">
+                      Проекты
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:void(0)">
+                      Контакты
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+              <button type="button" class="consult">
+                Заказать консультацию
+              </button>
+              <ul class="header-social">
+                <li>
+                  <a href="javascript:void(0)" target="_blank">
+                    <svg width="50" height="26" viewBox="0 0 50 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M48.8234 1.80427C49.194 0.786526 48.8234 0.0462983 47.1818 0.0462983H41.7275C40.3508 0.0462983 39.7153 0.693929 39.3447 1.38799C39.3447 1.38799 36.538 7.30968 32.6195 11.1494C31.3486 12.2598 30.7661 12.6299 30.0778 12.6299C29.707 12.6299 29.2305 12.2598 29.2305 11.242V1.75797C29.2305 0.55517 28.8069 0 27.6418 0H19.0634C18.2161 0 17.6866 0.55517 17.6866 1.11034C17.6866 2.26698 19.6458 2.5445 19.8577 5.78292V12.8149C19.8577 14.3417 19.54 14.6192 18.8516 14.6192C16.9982 14.6192 12.4971 8.65123 9.79649 1.85057C9.26687 0.508872 8.7374 0 7.36065 0H1.85336C0.264782 0 0 0.647767 0 1.3417C0 2.5908 1.85336 8.88259 8.63141 17.21C13.1326 22.9003 19.54 25.9537 25.312 25.9537C28.8069 25.9537 29.2305 25.2598 29.2305 24.1033V19.8008C29.2305 18.4128 29.5482 18.1816 30.6603 18.1816C31.4545 18.1816 32.8843 18.5516 36.1144 21.2811C39.8212 24.5195 40.4566 26 42.5218 26H47.9761C49.5647 26 50.3061 25.3061 49.8825 23.9644C49.4059 22.6228 47.6055 20.6798 45.2755 18.3665C44.0045 17.0713 42.0982 15.6371 41.5157 14.943C40.7214 14.0179 40.9333 13.6478 41.5157 12.8149C41.4629 12.8149 48.1349 4.58012 48.8234 1.80427Z"
+                        fill="#242220" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank">
+                    <svg width="39" height="33" viewBox="0 0 39 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M0.589035 15.3501C4.57883 13.1048 9.03254 11.2308 13.1939 9.34721C20.353 6.26208 27.5405 3.23041 34.8006 0.407959C36.2131 -0.0729589 38.7511 -0.54327 39 1.59543C38.8638 4.62274 38.3032 7.63233 37.9186 10.6419C36.9427 17.2603 35.8147 23.856 34.7147 30.4525C34.3357 32.6498 31.6415 33.7873 29.9177 32.3811C25.7748 29.5221 21.6001 26.6909 17.5102 23.7656C16.1704 22.3747 17.4128 20.3774 18.6093 19.3841C22.0215 15.9486 25.6402 13.0296 28.874 9.41652C29.7463 7.2643 27.1689 9.07813 26.3188 9.63387C21.6475 12.9227 17.0905 16.4123 12.1655 19.3028C9.64987 20.7176 6.7178 19.5085 4.20325 18.719C1.94864 17.7653 -1.35496 16.8043 0.589035 15.3501Z"
+                        fill="#242220" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank">
+                    <svg width="41" height="29" viewBox="0 0 41 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_346_22037)">
+                        <path
+                          d="M40.487 23.224C40.0983 26.285 38.325 28.2049 35.1774 28.4885C31.5735 28.8131 23.7718 29 20.1531 29C12.7512 29 9.44345 28.8197 5.94313 28.4585C2.60742 28.1148 1.14718 26.6367 0.573221 23.5853C0.171231 21.447 0 19.4442 0 14.711C0 10.4593 0.201362 7.78531 0.512959 5.5356C0.941405 2.4461 3.0682 0.710087 6.18491 0.451408C9.8109 0.150225 17.0746 0 20.6661 0C24.1363 0 31.946 0.180271 35.4184 0.571589C38.5263 0.921869 40.0042 2.57727 40.487 5.62574C40.487 5.62574 41 8.96513 41 14.7411C41 18.0299 40.7589 21.0886 40.487 23.224ZM16.1406 8.75408V20.5068L27.3632 14.6905L16.1406 8.75408Z"
+                          fill="#242220" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_346_22037">
+                          <rect width="41" height="29" fill="white" transform="matrix(1 0 0 -1 0 29)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:void(0)" target="_blank">
+                    <svg width="38" height="36" viewBox="0 0 38 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M18.5832 21.8992H5.53408V15.856H18.5832C19.3455 15.856 19.8755 16.0115 20.1414 16.283C20.4074 16.5546 20.5722 17.0582 20.5722 17.7938V19.9637C20.5722 20.7389 20.4074 21.2425 20.1414 21.514C19.8755 21.7855 19.3455 21.9015 18.5832 21.9015V21.8992ZM19.4785 10.1586H0V36.0024H5.53408V27.5943H15.7328L20.5722 36.0024H26.7692L21.4336 27.5549C23.4007 27.2137 24.2841 26.5082 25.0125 25.3455C25.741 24.1828 26.1063 22.3239 26.1063 19.8431V17.9052C26.1063 16.4339 25.9733 15.2712 25.741 14.38C25.5088 13.4888 25.1118 12.7137 24.548 12.0175C23.9526 11.3584 23.2896 10.8942 22.4936 10.5833C21.6977 10.3117 20.7032 10.1562 19.4785 10.1562V10.1586Z"
+                        fill="#242220" />
+                      <path
+                        d="M32.308 10.1538C35.3669 10.1538 37.8465 7.88081 37.8465 5.07692C37.8465 2.27302 35.3669 0 32.308 0C29.2492 0 26.7695 2.27302 26.7695 5.07692C26.7695 7.88081 29.2492 10.1538 32.308 10.1538Z"
+                        fill="#242220" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <button type="button" class="burger">
+            <svg width="20" height="12" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="20" height="1.5" rx="0.75" fill="#73716F" />
+              <rect y="5" width="20" height="1.5" rx="0.75" fill="#73716F" />
+              <rect y="10" width="20" height="1.5" rx="0.75" fill="#73716F" />
+            </svg>
           </button>
         </div>
       </div>
@@ -1355,6 +1427,7 @@
     </section>
   </main>
   <footer>
+    <div class="overlay"></div>
     <div class="container">
       <div class="footer-inner">
         <div class="footer-top">
