--- a/catalog.html
+++ b/catalog.html
@@ -518,6 +518,15 @@
                     14 км от МКАД, Новорижское шоссе
                   </div>
                 </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
+                </div>
               </div>
               <ul class="catalog-item__filters">
                 <li class="catalog-item__filter">
@@ -579,6 +588,15 @@
                   <div class="catalog-item__location">
                     14 км от МКАД, Новорижское шоссе
                   </div>
+                </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
                 </div>
               </div>
               <ul class="catalog-item__filters">
@@ -688,67 +706,14 @@
                     14 км от МКАД, Новорижское шоссе
                   </div>
                 </div>
-              </div>
-              <ul class="catalog-item__filters">
-                <li class="catalog-item__filter">
-                  участок 30 соток
-                </li>
-                <li class="catalog-item__filter">
-                  чистовая отделка
-                </li>
-                <li class="catalog-item__filter">
-                  6 спален
-                </li>
-                <li class="catalog-item__filter">
-                  2 этажа
-                </li>
-              </ul>
-            </a>
-          </li>
-          <li class="catalog-item">
-            <a href="javascript:void(0)">
-              <div class="catalog-item__image">
-                <div class="splide catalog-images__slider">
-                  <div class="splide__track">
-                    <ul class="splide__list">
-                      <li class="splide__slide">
-                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                      </li>
-                      <li class="splide__slide">
-                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                      </li>
-                      <li class="splide__slide">
-                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                      </li>
-                      <li class="splide__slide">
-                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="catalog-item__tag">
-                  участок 30 соток
-                </div>
-              </div>
-              <div class="catalog-item__body">
-                <div class="catalog-item__prices">
-                  <div class="catalog-item__price">
-                    957 242 300 ₽
-                  </div>
-                  <div class="catalog-item__old-price">
-                    998 242 300 ₽
-                  </div>
-                  <div class="catalog-item__sale">
-                    -41%
-                  </div>
-                </div>
-                <div class="catalog-item__info">
-                  <div class="catalog-item__name">
-                    Дом в коттеджном поселке «Crystal Istra», 1000 м²
-                  </div>
-                  <div class="catalog-item__location">
-                    14 км от МКАД, Новорижское шоссе
-                  </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
                 </div>
               </div>
               <ul class="catalog-item__filters">
@@ -812,6 +777,15 @@
                     14 км от МКАД, Новорижское шоссе
                   </div>
                 </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
+                </div>
               </div>
               <ul class="catalog-item__filters">
                 <li class="catalog-item__filter">
@@ -873,6 +847,86 @@
                   <div class="catalog-item__location">
                     14 км от МКАД, Новорижское шоссе
                   </div>
+                </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
+                </div>
+              </div>
+              <ul class="catalog-item__filters">
+                <li class="catalog-item__filter">
+                  участок 30 соток
+                </li>
+                <li class="catalog-item__filter">
+                  чистовая отделка
+                </li>
+                <li class="catalog-item__filter">
+                  6 спален
+                </li>
+                <li class="catalog-item__filter">
+                  2 этажа
+                </li>
+              </ul>
+            </a>
+          </li>
+          <li class="catalog-item">
+            <a href="javascript:void(0)">
+              <div class="catalog-item__image">
+                <div class="splide catalog-images__slider">
+                  <div class="splide__track">
+                    <ul class="splide__list">
+                      <li class="splide__slide">
+                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                      </li>
+                      <li class="splide__slide">
+                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                      </li>
+                      <li class="splide__slide">
+                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                      </li>
+                      <li class="splide__slide">
+                        <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="catalog-item__tag">
+                  участок 30 соток
+                </div>
+              </div>
+              <div class="catalog-item__body">
+                <div class="catalog-item__prices">
+                  <div class="catalog-item__price">
+                    957 242 300 ₽
+                  </div>
+                  <div class="catalog-item__old-price">
+                    998 242 300 ₽
+                  </div>
+                  <div class="catalog-item__sale">
+                    -41%
+                  </div>
+                </div>
+                <div class="catalog-item__info">
+                  <div class="catalog-item__name">
+                    Дом в коттеджном поселке «Crystal Istra», 1000 м²
+                  </div>
+                  <div class="catalog-item__location">
+                    14 км от МКАД, Новорижское шоссе
+                  </div>
+                </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
                 </div>
               </div>
               <ul class="catalog-item__filters">
@@ -982,6 +1036,15 @@
                     14 км от МКАД, Новорижское шоссе
                   </div>
                 </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
+                </div>
               </div>
               <ul class="catalog-item__filters">
                 <li class="catalog-item__filter">
@@ -1043,6 +1106,15 @@
                   <div class="catalog-item__location">
                     14 км от МКАД, Новорижское шоссе
                   </div>
+                </div>
+                <div class="fake-product-btn">
+                  <span>
+                    Подробнее
+                  </span>
+                  <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                      stroke-miterlimit="16" stroke-linecap="square" />
+                  </svg>
                 </div>
               </div>
               <ul class="catalog-item__filters">
@@ -1352,67 +1424,14 @@
                       14 км от МКАД, Новорижское шоссе
                     </div>
                   </div>
-                </div>
-                <ul class="catalog-item__filters">
-                  <li class="catalog-item__filter">
-                    участок 30 соток
-                  </li>
-                  <li class="catalog-item__filter">
-                    чистовая отделка
-                  </li>
-                  <li class="catalog-item__filter">
-                    6 спален
-                  </li>
-                  <li class="catalog-item__filter">
-                    2 этажа
-                  </li>
-                </ul>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a href="javascript:void(0)">
-                <div class="catalog-item__image">
-                  <div class="splide catalog-images__slider">
-                    <div class="splide__track">
-                      <ul class="splide__list">
-                        <li class="splide__slide">
-                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                        </li>
-                        <li class="splide__slide">
-                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                        </li>
-                        <li class="splide__slide">
-                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                        </li>
-                        <li class="splide__slide">
-                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="catalog-item__tag">
-                    участок 30 соток
-                  </div>
-                </div>
-                <div class="catalog-item__body">
-                  <div class="catalog-item__prices">
-                    <div class="catalog-item__price">
-                      957 242 300 ₽
-                    </div>
-                    <div class="catalog-item__old-price">
-                      998 242 300 ₽
-                    </div>
-                    <div class="catalog-item__sale">
-                      -41%
-                    </div>
-                  </div>
-                  <div class="catalog-item__info">
-                    <div class="catalog-item__name">
-                      Дом в коттеджном поселке «Crystal Istra», 1000 м²
-                    </div>
-                    <div class="catalog-item__location">
-                      14 км от МКАД, Новорижское шоссе
-                    </div>
+                  <div class="fake-product-btn">
+                    <span>
+                      Подробнее
+                    </span>
+                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                        stroke-miterlimit="16" stroke-linecap="square" />
+                    </svg>
                   </div>
                 </div>
                 <ul class="catalog-item__filters">
@@ -1476,6 +1495,15 @@
                       14 км от МКАД, Новорижское шоссе
                     </div>
                   </div>
+                  <div class="fake-product-btn">
+                    <span>
+                      Подробнее
+                    </span>
+                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                        stroke-miterlimit="16" stroke-linecap="square" />
+                    </svg>
+                  </div>
                 </div>
                 <ul class="catalog-item__filters">
                   <li class="catalog-item__filter">
@@ -1537,6 +1565,86 @@
                     <div class="catalog-item__location">
                       14 км от МКАД, Новорижское шоссе
                     </div>
+                  </div>
+                  <div class="fake-product-btn">
+                    <span>
+                      Подробнее
+                    </span>
+                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                        stroke-miterlimit="16" stroke-linecap="square" />
+                    </svg>
+                  </div>
+                </div>
+                <ul class="catalog-item__filters">
+                  <li class="catalog-item__filter">
+                    участок 30 соток
+                  </li>
+                  <li class="catalog-item__filter">
+                    чистовая отделка
+                  </li>
+                  <li class="catalog-item__filter">
+                    6 спален
+                  </li>
+                  <li class="catalog-item__filter">
+                    2 этажа
+                  </li>
+                </ul>
+              </a>
+            </li>
+            <li class="catalog-item">
+              <a href="javascript:void(0)">
+                <div class="catalog-item__image">
+                  <div class="splide catalog-images__slider">
+                    <div class="splide__track">
+                      <ul class="splide__list">
+                        <li class="splide__slide">
+                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                        </li>
+                        <li class="splide__slide">
+                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                        </li>
+                        <li class="splide__slide">
+                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                        </li>
+                        <li class="splide__slide">
+                          <img src="./assets/img/ct.jpg" alt="Дом в коттеджном поселке «Crystal Istra», 1000 м²">
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="catalog-item__tag">
+                    участок 30 соток
+                  </div>
+                </div>
+                <div class="catalog-item__body">
+                  <div class="catalog-item__prices">
+                    <div class="catalog-item__price">
+                      957 242 300 ₽
+                    </div>
+                    <div class="catalog-item__old-price">
+                      998 242 300 ₽
+                    </div>
+                    <div class="catalog-item__sale">
+                      -41%
+                    </div>
+                  </div>
+                  <div class="catalog-item__info">
+                    <div class="catalog-item__name">
+                      Дом в коттеджном поселке «Crystal Istra», 1000 м²
+                    </div>
+                    <div class="catalog-item__location">
+                      14 км от МКАД, Новорижское шоссе
+                    </div>
+                  </div>
+                  <div class="fake-product-btn">
+                    <span>
+                      Подробнее
+                    </span>
+                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M4.63644 0.5L9.13535 0.500399V4.99951M8.80502 0.830389L0.707031 8.92838" stroke="white"
+                        stroke-miterlimit="16" stroke-linecap="square" />
+                    </svg>
                   </div>
                 </div>
                 <ul class="catalog-item__filters">
